--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ http://www.tooplate.com/view/2075-digital-team
 			</div>
 			<div class="col-md-6 col-sm-12">
 				<h3 class="bold">BEYOND BORDERS</h3>
-				<h1 class="heading bold">One of Burlingame's first volunteering clubs.</h1>
+				<h1 class="heading bold">One of Burlingame's first volunteering clubs. poop</h1>
 				<!-- Nav tabs -->
 				<ul class="nav nav-tabs" role="tablist">
 					<li class="active"><a href="#design" aria-controls="design" role="tab" data-toggle="tab">About</a></li>
